--- a/app/views/books/new.html.haml
+++ b/app/views/books/new.html.haml
@@ -3,10 +3,12 @@
     .card-body
       .info_text_block
         %span
-          Correct book's data or get
+          Enter the data of a new book, or get
         - if request.referer
           = link_to 'back', request.referrer
         - else
-          = link_to 'back', book_path(@book)
+          = link_to 'back', books_path
+        %span
+          to Books list
       %br/
-      = render 'edit', book: @book
+      = render 'new', book: @book
